--- a/src/introduction-to-natural-language-processing-in-python/chapter_3.ipynb
+++ b/src/introduction-to-natural-language-processing-in-python/chapter_3.ipynb
@@ -161,7 +161,11 @@
     "values = [ner_categories.get(v) for v in labels]\n",
     "\n",
     "plt.pie(values, labels=labels, autopct='%1.1f%%', startangle=140)\n",
-    "plt.show()"
+    "plt.show()\n",
+    "\n",
+    "# hint\n",
+    "# If the condition inside the nested for loop is true, increment ner_categories[chunk.label()].\n",
+    "# Use the .keys() method on ner_categories to access its keys."
    ]
   },
   {
